--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-    "name": "gps-log-viewer",
-    "description": "Minimalistic web app to show GPS tracks",
-    "author": "Per Liedman <per@liedman.net>",
-    "dependencies": {
-        "backbone": "~1.0.0",
-        "jquery-untouched": "~1.10.2"
-    }
+  "name": "gps-log-viewer",
+  "description": "Minimalistic web app to show GPS tracks",
+  "author": "Per Liedman <per@liedman.net>",
+  "dependencies": {
+    "backbone": "^1.0.0",
+    "jquery-untouched": "^1.10.2",
+    "handlebars": "~1.3.0",
+    "underscore": "^1.6.0",
+    "moment": "^2.5.1"
+  },
+  "devDependencies": {
+    "hbsfy": "^1.3.2"
+  }
 }
