--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "author": "Per Liedman <per@liedman.net>",
   "dependencies": {
     "backbone": "^1.0.0",
-    "jquery-untouched": "^1.10.2",
     "handlebars": "~1.3.0",
-    "underscore": "^1.6.0",
-    "moment": "^2.5.1"
+    "jquery-untouched": "^1.10.2",
+    "moment": "^2.5.1",
+    "turf-bezier": "^1.0.2",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "hbsfy": "^1.3.2"
