--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "author": "Per Liedman <per@liedman.net>",
   "dependencies": {
     "backbone": "^1.0.0",
+    "brfs": "^1.4.1",
     "handlebars": "~1.3.0",
     "jquery-untouched": "^1.10.2",
     "moment": "^2.5.1",
+    "togeojson": "^0.13.0",
     "turf-bezier": "^1.0.2",
     "underscore": "^1.6.0"
   },
